[gd_scene load_steps=16 format=3 uid="uid://b10hh8m5vqmuj"]

[ext_resource type="Script" path="res://Scripts/Objects' Scripts/xp_zone.gd" id="1_kp6es"]

[sub_resource type="Animation" id="Animation_u7xbw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Line2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Line2D2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_gk8v4"]
resource_name = "the_spin"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Line2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Line2D2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fr5rh"]
_data = {
"RESET": SubResource("Animation_u7xbw"),
"the_spin": SubResource("Animation_gk8v4")
}

[sub_resource type="Gradient" id="Gradient_i4ilk"]
offsets = PackedFloat32Array(0, 0.284264, 0.609137, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_46d1f"]
gradient = SubResource("Gradient_i4ilk")

[sub_resource type="Curve" id="Curve_dylt2"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="CurveTexture" id="CurveTexture_4sycn"]
curve = SubResource("Curve_dylt2")

[sub_resource type="Curve" id="Curve_1i4qb"]
min_value = -10.0
max_value = 10.0
_data = [Vector2(0, 10), 0.0, 0.0, 0, 0, Vector2(1, 2.08791), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_n8was"]
curve = SubResource("Curve_1i4qb")

[sub_resource type="Curve" id="Curve_aa548"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.342222, 1), 0.0, 0.0, 0, 0, Vector2(0.848889, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_du8dj"]
curve = SubResource("Curve_aa548")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8aigy"]
particle_flag_align_y = true
particle_flag_disable_z = true
emission_shape = 2
emission_sphere_radius = 70.0
direction = Vector3(0, 0, 0)
gravity = Vector3(0, 0, 0)
radial_accel_min = -100.0
radial_accel_max = -100.0
radial_accel_curve = SubResource("CurveTexture_n8was")
damping_min = 83.228
damping_max = 100.0
scale_max = 5.0
scale_curve = SubResource("CurveTexture_du8dj")
color = Color(1, 0.993333, 0.6, 1)
color_ramp = SubResource("GradientTexture1D_46d1f")
emission_curve = SubResource("CurveTexture_4sycn")
hue_variation_min = -0.1
hue_variation_max = 0.1
turbulence_enabled = true
turbulence_noise_strength = 4.09
turbulence_noise_scale = 9.394
turbulence_noise_speed_random = 4.0
turbulence_influence_min = 0.0
turbulence_influence_max = 0.212
turbulence_initial_displacement_min = -27.3
turbulence_initial_displacement_max = 15.2
collision_use_scale = true

[sub_resource type="Gradient" id="Gradient_gkdby"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lg5mn"]
gradient = SubResource("Gradient_gkdby")
fill = 2
fill_from = Vector2(0.5, 0.5)

[node name="xp zone" type="Node2D"]
z_index = -3
script = ExtResource("1_kp6es")

[node name="Line2D" type="Line2D" parent="."]
scale = Vector2(8, 8)
points = PackedVector2Array(0, -15, -15, 0, 0, 15, 15, 0)
closed = true
width = 1.0
default_color = Color(0.847059, 0.862745, 0.705882, 1)

[node name="ColorRect2" type="ColorRect" parent="Line2D"]
offset_top = -22.6667
offset_right = 32.0
offset_bottom = 9.33333
rotation = 0.785398
color = Color(0.996078, 0.658824, 0.372549, 0.0235294)

[node name="Line2D2" type="Line2D" parent="."]
scale = Vector2(5, 5)
points = PackedVector2Array(-10, -25, 10, -25, 25, -10, 25, 10, 10, 25, -10, 25, -25, 10, -25, -10)
closed = true
width = 2.0
default_color = Color(0.847059, 0.862745, 0.576471, 1)

[node name="ColorRect" type="ColorRect" parent="Line2D2"]
offset_top = -24.0
offset_right = 34.0
offset_bottom = 10.0
rotation = 0.785398
color = Color(0.996078, 0.658824, 0.372549, 0.0352941)

[node name="Area2D" type="Area2D" parent="Line2D2"]
collision_layer = 0
input_pickable = false
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Line2D2/Area2D"]
polygon = PackedVector2Array(-10, -24, 9.99999, -24, 24, -10, 24, 10, 9.99999, 24, -10, 24, -24, 10, -24, -10)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fr5rh")
}

[node name="CPUParticles2D" type="GPUParticles2D" parent="."]
z_index = -1
emitting = false
amount = 200
sub_emitter = NodePath(".")
process_material = SubResource("ParticleProcessMaterial_8aigy")
interp_to_end = 0.044

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 1.5
shadow_enabled = true
texture = SubResource("GradientTexture2D_lg5mn")
texture_scale = 5.73

[connection signal="body_entered" from="Line2D2/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Line2D2/Area2D" to="." method="_on_area_2d_body_exited"]
